# RTL-BenchLS

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: ssh_config.yaml.example
data/: README.md  masked_designs.jsonl  repo_issue_108_cases.json  slice_01.jsonl  slice_02.jsonl  slice_03.jsonl  slice_04.jsonl  slice_05.jsonl  slice_06.jsonl  slice_07.jsonl  slice_08.jsonl  slice_09.jsonl  slice_10.jsonl  slice_11.jsonl  slice_12.jsonl  slice_13.jsonl  slice_14.jsonl  slice_15.jsonl  slice_16.jsonl  slice_17.jsonl  slice_18.jsonl  slice_19.jsonl  slice_20.jsonl
docs/: formal_verification.md
results/: README.md  results_summary.json
results/task_1_round_trip/: claude-haiku-4.5.jsonl  claude-sonnet-4.5.jsonl  deepseek-v3.2.jsonl  gpt-4o.jsonl  llama-3.3-70b.jsonl  qwen3.5-397b.jsonl
results/task_2_masked_content/: claude-haiku-4.5.jsonl  claude-sonnet-4.5.jsonl  deepseek-v3.2.jsonl  gpt-4o.jsonl  llama-3.3-70b.jsonl  qwen3.5-397b.jsonl
results/task_3_repo_issue/: claude-haiku-4.5.jsonl  claude-sonnet-4.5.jsonl  deepseek-v3.2.jsonl  gpt-4o.jsonl  llama-3.3-70b.jsonl  qwen3.5-397b.jsonl
rtlbenchls/: __init__.py  aggregate.py  dataset.py  fetch_repo.py  protocols.py  run.py  runner.py  utils.py  verify_noop.py  verify_reference.py
scripts/: clone_repos.py
tasks/: README.md  run_all.py
tasks/task1_round_trip/: README.md  example_run.py
tasks/task2_mask_infilling/: README.md  example_run.py
tasks/task3_repo_issue/: README.md  example_run.py
tests/: test_framework.py
