[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rtlbenchls"
version = "0.1.0"
description = "Evaluation framework for RTL-BenchLS: round-trip reasoning, masked-content reasoning, and repository-issue fixing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RTL-BenchLS authors" }]

[project.optional-dependencies]
tokens = ["tiktoken"]

[project.scripts]
rtlbenchls = "rtlbenchls.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rtlbenchls*"]
